design fix title smaller on mobile

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -1070,6 +1070,16 @@ h3.project-title.small-category-title {
     height: 79px;
   }
 }
+@media (max-width: 660px){ 
+  h3.content-brief,h2.category-title,h3.project-title{
+    font-size: 1.3em;
+  }
+}
+@media (max-width: 620px){ 
+  h3.content-brief,h2.category-title,h3.project-title{
+    font-size: 1.2em;
+  }
+}
 @media (max-width: 600px){ 
   h2.category-title {
     font-size: 20px;
